--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -205,7 +205,7 @@ The main focus of this work is to efficiently combine the two layers \textit{Clo
     \item Security - physical access control as well as isolating applications from each other is a difficult task. Also, the data traffic must be separated accordingly. In general, \ac{IT} security is a hot topic, and especially at the edge, it requires appropriate consideration for hardening the environment.
     \item Monitoring - another important factor is on how to capture metrics and events (logs) from the edge. They need to be indexed on a centralized instance in order to get a general overview on what's happening. Because of the dynamic and rapid changes some kind of automatic discovery should be used for that purpose.
 \end{itemize}
-The above-mentioned challenges provide a good starting point for defining the necessary test to find the matching target architecture. Details about this test can be found in the chapter \textit{\hyperref[sec:dsrmethode]{Methodlogy}}.
+The above-mentioned challenges provide a good starting point for defining the necessary tests to find the matching target architecture. Details about this test can be found in the chapter \textit{\hyperref[sec:dsrmethode]{Methodlogy}}.
 
 
 \section{Architecture}
@@ -216,7 +216,7 @@ why is it called Default
 challanges
 Target length: 2-4 S (incl. picture)
 \subsection{distributed K8s}
-Cluster running indepented
+Cluster running indepented - KubeFed
 Target length: 2-4 S (incl. picture)
 \subsection{Service Mesh}
 Using the Service-Mesh for Edge-Computing (Smar-Nic!)
