drawio to pdf script + new graphics

--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -226,6 +226,12 @@ challanges
 Target length: 2-4 S (incl. picture)
 \subsection{distributed K8s}
 Cluster running indepented - KubeFed
+\begin{figure}[h]
+    \centering
+    \tcbox[sharp corners, boxsep=4mm, boxrule=0.2mm, colframe=gray!20!gray, colback=white]{\includegraphics[width=0.75\textwidth]{PICs/drawio/distributed-k8s.drawio.pdf}}
+    \caption{Distributed \ac{K8S} architeture}
+    \label{fig:default-k8s}
+\end{figure}
 Target length: 2-4 S (incl. picture)
 \subsection{Service Mesh}
 Using the Service-Mesh for Edge-Computing (Smar-Nic!)
