--- a/Literatur.bib
+++ b/Literatur.bib
@@ -62,6 +62,14 @@
   url    = {https://minikube.sigs.k8s.io/docs/start/},
 }
 
+@WWW{servicemesh,
+  author = {CNCF},
+  date   = {2018-03-15},
+  editor = {Malphi},
+  title  = {Service Mesh - from technical selection to best practice},
+  url    = {https://www.cncf.io/wp-content/uploads/2020/08/rfma-servicemesh-cncf.pdf},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
